--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -7,14 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.8.3",
+    "react": "16.6.3",
     "react-native": "^0.57.8",
-    "react-native-navigation": "^2.16.0",
-    "react-navigation": "^3.0.9",
+    "react-native-collapsible": "^1.4.0",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.0.14",
+    "react-native-navigation": "^2.16.0",
     "react-native-remote-svg": "^1.4.0",
-    "react-native-vector-icons": "^6.2.0"
+    "react-native-vector-icons": "^6.2.0",
+    "react-navigation": "^3.0.9"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
