--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -12,6 +12,7 @@
     "react-native-collapsible": "^1.4.0",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.0.14",
+    "react-native-modal-datetime-picker": "^6.1.0",
     "react-native-navigation": "^2.16.0",
     "react-native-remote-svg": "^1.4.0",
     "react-native-vector-icons": "^6.2.0",
