--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -14,6 +14,7 @@
     "react-native-gesture-handler": "^1.0.14",
     "react-native-modal-datetime-picker": "^6.1.0",
     "react-native-navigation": "^2.16.0",
+    "react-native-notifications": "^1.3.0",
     "react-native-remote-svg": "^1.4.0",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.0.9"
