--- a/WhenDidIDoIt/android/app/build.gradle
+++ b/WhenDidIDoIt/android/app/build.gradle
@@ -138,6 +138,10 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-webview')
+    implementation project(':react-native-maps')
+    implementation project(':react-native-linear-gradient')
+    implementation project(':@react-native-community_async-storage')
     compile project(':react-native-vector-icons')
     compile project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
