--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -7,24 +7,33 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.6.3",
-    "react-native": "^0.57.8",
+    "@react-native-community/async-storage": "^1.4.0",
+    "prop-types": "^15.7.2",
+    "react": "16.8.3",
+    "react-native": "0.59.8",
+    "react-native-async-storage": "0.0.1",
     "react-native-collapsible": "^1.4.0",
     "react-native-elements": "^1.1.0",
-    "react-native-gesture-handler": "^1.0.14",
-    "react-native-modal-datetime-picker": "^6.1.0",
-    "react-native-navigation": "^2.16.0",
-    "react-native-notifications": "^1.3.0",
-    "react-native-remote-svg": "^1.4.0",
-    "react-native-vector-icons": "^6.2.0",
-    "react-navigation": "^3.0.9"
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-linear-gradient": "^2.5.4",
+    "react-native-maps": "^0.24.2",
+    "react-native-modal": "^11.0.0",
+    "react-native-navigation": "^2.18.5",
+    "react-native-netinfo": "^1.1.0",
+    "react-native-open-maps": "^0.3.3",
+    "react-native-popover-view": "^2.0.1",
+    "react-native-remote-svg": "^2.0.6",
+    "react-native-vector-icons": "^6.4.2",
+    "react-native-webview": "^5.8.2",
+    "react-navigation": "^3.9.1",
+    "validate.js": "^0.12.0"
   },
   "devDependencies": {
-    "@babel/core": "7.4.3",
-    "@babel/runtime": "7.4.3",
-    "babel-jest": "24.7.1",
-    "jest": "24.7.1",
-    "metro-react-native-babel-preset": "0.53.1",
+    "@babel/core": "7.4.4",
+    "@babel/runtime": "7.4.4",
+    "babel-jest": "24.8.0",
+    "jest": "24.8.0",
+    "metro-react-native-babel-preset": "0.54.0",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
