--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -3,38 +3,40 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.4.0",
+    "@react-native-community/async-storage": "^1.6.1",
     "prop-types": "^15.7.2",
-    "react": "16.8.3",
-    "react-native": "0.59.8",
-    "react-native-async-storage": "0.0.1",
-    "react-native-collapsible": "^1.4.0",
+    "react": "16.8.6",
+    "react-native": "0.60.4",
+    "react-native-collapsible": "^1.5.1",
     "react-native-elements": "^1.1.0",
-    "react-native-gesture-handler": "^1.2.1",
-    "react-native-linear-gradient": "^2.5.4",
-    "react-native-maps": "^0.24.2",
-    "react-native-modal": "^11.0.0",
-    "react-native-navigation": "^2.18.5",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-maps": "^0.25.0",
+    "react-native-modal": "^11.3.1",
+    "react-native-modal-datetime-picker": "^7.5.0",
+    "react-native-navigation": "^3.0.0-alpha.10",
     "react-native-netinfo": "^1.1.0",
     "react-native-open-maps": "^0.3.3",
-    "react-native-popover-view": "^2.0.1",
+    "react-native-popover-view": "^2.0.4",
     "react-native-remote-svg": "^2.0.6",
-    "react-native-vector-icons": "^6.4.2",
-    "react-native-webview": "^5.8.2",
-    "react-navigation": "^3.9.1",
-    "validate.js": "^0.12.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^6.7.0",
+    "react-navigation": "^3.11.1",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
-    "@babel/core": "7.4.4",
-    "@babel/runtime": "7.4.4",
+    "@babel/core": "7.5.5",
+    "@babel/runtime": "7.5.5",
+    "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.8.0",
+    "eslint": "6.1.0",
     "jest": "24.8.0",
-    "metro-react-native-babel-preset": "0.54.0",
-    "react-test-renderer": "16.8.3"
+    "metro-react-native-babel-preset": "0.54.1",
+    "react-test-renderer": "16.8.6"
   },
   "jest": {
     "preset": "react-native"
