--- a/WhenDidIDoIt/android/build.gradle
+++ b/WhenDidIDoIt/android/build.gradle
@@ -27,6 +27,7 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
         }
+         maven { url "https://jitpack.io" }
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
