--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "@react-native-community/cameraroll": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-camera": "^3.1.1",
     "react-native-collapsible": "^1.5.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
