added image picker support

--- a/WhenDidIDoIt/android/app/build.gradle
+++ b/WhenDidIDoIt/android/app/build.gradle
@@ -116,6 +116,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-picker')
     implementation project(':react-native-camera')
     implementation project(':@react-native-community_cameraroll')
     implementation fileTree(dir: "libs", include: ["*.jar"])
