--- a/WhenDidIDoIt/ios/WhenDidIDoIt/Info.plist
+++ b/WhenDidIDoIt/ios/WhenDidIDoIt/Info.plist
@@ -4,7 +4,6 @@
 <dict>
 	<key>NSCameraUsageDescription</key>
 	<string>Your message to user when the camera is accessed for the first time</string>
-	<!-- Include this only if you are planning to use the camera roll -->
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Your message to user when the photo library is accessed for the first time</string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -43,7 +42,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
