--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -17,6 +17,7 @@
     "react-native-collapsible": "^1.5.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-picker": "^1.0.2",
     "react-native-maps": "^0.25.0",
     "react-native-modal": "^11.3.1",
     "react-native-modal-datetime-picker": "^7.5.0",
