--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -28,7 +28,9 @@
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-navigation": "^3.0.0-alpha.10",
     "react-native-netinfo": "^1.1.0",
+    "react-native-notifications": "^2.1.3",
     "react-native-open-maps": "^0.3.3",
+    "react-native-picker-select": "^6.3.3",
     "react-native-popover-view": "^2.0.4",
     "react-native-remote-svg": "^2.0.6",
     "react-native-vector-icons": "^6.6.0",
