--- a/WhenDidIDoIt/android/app/build.gradle
+++ b/WhenDidIDoIt/android/app/build.gradle
@@ -121,6 +121,7 @@ dependencies {
     implementation project(':@react-native-community_cameraroll')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':reactnativenotifications')
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
