add modules update

--- a/WhenDidIDoIt/android/app/build.gradle
+++ b/WhenDidIDoIt/android/app/build.gradle
@@ -59,6 +59,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         missingDimensionStrategy 'react-native-camera', 'general'
+        missingDimensionStrategy "RNNotifications.reactNativeVersion", "general"
         versionCode 1
         versionName "1.0"
     }
