--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -15,21 +15,21 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "@react-native-community/cameraroll": "^1.1.1",
+    "appcenter": "2.5.0",
+    "appcenter-analytics": "2.5.0",
+    "appcenter-crashes": "2.5.0",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
-    "react-native-camera": "^3.1.1",
+    "react-native-camera": "^3.8.0",
     "react-native-collapsible": "^1.5.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^1.0.2",
-    "react-native-maps": "^0.25.0",
     "react-native-modal": "^11.3.1",
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-navigation": "^3.0.0-alpha.10",
-    "react-native-netinfo": "^1.1.0",
     "react-native-notifications": "^2.1.3",
-    "react-native-open-maps": "^0.3.3",
     "react-native-picker-select": "^6.3.3",
     "react-native-popover-view": "^2.0.4",
     "react-native-remote-svg": "^2.0.6",
