--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -13,12 +13,19 @@
     ]
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.7.4",
     "@react-native-community/async-storage": "^1.6.1",
     "@react-native-community/cameraroll": "^1.1.1",
     "@react-native-community/netinfo": "^4.6.1",
     "appcenter": "2.5.0",
     "appcenter-analytics": "2.5.0",
     "appcenter-crashes": "2.5.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-preset-react-native": "4.0.1",
+    "mobx": "^5.15.0",
+    "mobx-react": "^6.1.4",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
