--- a/WhenDidIDoIt/package.json
+++ b/WhenDidIDoIt/package.json
@@ -41,6 +41,7 @@
     "react-native-picker-select": "^6.3.3",
     "react-native-popover-view": "^2.0.4",
     "react-native-remote-svg": "^2.0.6",
+    "react-native-swipe-list-view": "^2.0.6",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^6.7.0",
     "react-navigation": "^3.11.1",
